--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "skipLibCheck": true,
     "sourceMap": false,
     "strictNullChecks": false,
-    "target": "es2016"
+    "target": "es2016",
+    "allowJs": true
   },
   "include": [
     "src/**/*.ts"
